force-app/main/default/objects/Interaction_Intelligence__c/fields/Concerns_Objections__c.field-meta.xml
<CustomField>
    <fullName>Concerns_Objections__c</fullName>
    <description>이 상호작용에서 나온 고객의 우려 사항 또는 반대 의견.</description>
    <label>Concerns / Objections</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>