force-app/main/default/objects/Interaction_Intelligence__c/fields/Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up__c</fullName>
    <description>이 상호작용에 따른 후속 조치 계획.</description>
    <label>Follow-up</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>