force-app/main/default/objects/Interaction_Intelligence__c/fields/Key_Decision__c.field-meta.xml
<CustomField>
    <fullName>Key_Decision__c</fullName>
    <description>이 상호작용에서 나온 핵심 의사결정 사항.</description>
    <label>Key Decision</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>