force-app/main/default/objects/Interaction_Intelligence__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <description>원본 상호작용의 유형. Source_Record_Id__c가 어떤 오브젝트(Task/Event/EmailMessage)를 가리키는지 UI 표시, 필터, 향후 검증에 사용하는 보조 필드입니다.</description>
    <label>Source Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Online Meeting</fullName>
            </value>
            <value>
                <fullName>Offline Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>